# gaymr

./: .editorconfig  .env.example  .gitignore  Makefile  docker-compose.yml  go.mod  go.sum  sqlc.yaml
cmd/api/: main.go
cmd/orchestrator/: main.go
cricdata/: .gitignore  PHASE2.md  README.md  pyproject.toml
cricdata/infra/: README.md  app.py  cdk.json
cricdata/infra/stacks/: cricdata_stack.py
cricdata/ingest/: cricdata_poller.py  cricsheet.py  dynamo_quota.py  parquet_writer.py  sqlite_store.py  store.py
cricdata/lambdas/: cricdata_poller_lambda.py  cricsheet_etl.py
cricdata/schema/: models.py
cricdata/scripts/: load_sqlite.py  smoke_phase1.py  smoke_phase2.py  spot_check.py
cricdata/tests/: test_dynamo_quota.py  test_parquet_writer.py  test_quota_guard.py
db/migrations/: 0001_init.down.sql  0001_init.up.sql
db/queries/: sessions.sql  users.sql
docs/: system-design.md
docs/adr/: 0000-template.md  0001-monorepo.md  0002-control-plane-on-ecs-fargate.md  0003-clerk-auth.md  0004-modular-monolith.md  0005-cricdata-store.md  0006-phase3-poller-cadence.md
infra/sunshine-node/: README.md  launch.sh  provision-remote.sh  provision.sh  sunshine.conf  xorg.conf
internal/auth/: clerk.go
internal/config/: config.go
internal/jobs/: jobs.go  jobs_test.go
internal/obs/: obs.go
internal/providers/: provider.go  registry.go
internal/providers/aws_managed/: aws_managed.go
internal/sessions/: sessions.go  sessions_test.go
internal/store/: store.go
internal/store/sqlc/: models.go  sessions.sql.go  users.sql.go
