[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cricdata"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = [".."]
include = ["cricdata*"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
