[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cricdata"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "pyarrow>=15",
]

[project.optional-dependencies]
dev = ["pytest>=8", "moto[dynamodb,s3]>=5"]
infra = ["aws-cdk-lib>=2.130", "constructs>=10"]

[tool.setuptools.packages.find]
where = [".."]
include = ["cricdata*"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
